finished first draft of the first section, I will need to fix the formatting of the contents such as the spacing of the placeholder and the oreintation of hero-main and hero sub. Additionally, I still need to include the sign up button below hero sub

--- a/style.css
+++ b/style.css
@@ -12,17 +12,21 @@ body {
     display: flex; 
     flex: 1;
     flex-direction: column;
+    padding: 20px;
+    background-color: #1f2937;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .header {
 
     display: flex;
     height: 72px;
   background: #1f2937;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
 
 
   padding: 50px;
   flex: 1;
+ 
   
 
   
@@ -40,7 +44,7 @@ margin-right: auto;
 
 .header-links {
 
-    color: #f9faf8;
+    color: #e5e7eb;
     margin-left: auto;
   
     
@@ -51,7 +55,7 @@ li {
    display: flex;
    justify-content: center;
 gap: 24px;
-flex: 1;
+
 
 
 }    
@@ -60,4 +64,50 @@ flex: 1;
 ul {
     margin: 0;
     padding: 0;
+}
+
+
+
+
+.hero-main {
+
+    font-size: 48px;
+    font-weight: bold;
+    color: #f9faf8;
+}
+
+.hero-sub {
+
+    font-size: 18px;
+    color: #e5e7eb
+}
+
+.section1 .body-left{
+
+
+    max-width: 350px;
+
+}
+
+.section1 .empty {
+    display: flex;
+    justify-content: center;
+    height: 250px;
+    width: 40%;
+    background-color: gray;
+    color: white;
+    text-align: center;
+    align-items: center;
+
+
+
+}
+
+.body1 {
+
+    display: flex;
+    padding: 40px;
+    align-items: center;
+    justify-content: center;
+    gap: 10%;
 }
